# LibManager

./: .gitignore
LibManagerServer/src/: CMakeLists.txt  main.cpp
LibManagerServer/src/config/: config.json  libManagerConfig.json
LibManagerServer/src/controllers/: RecordController.cc  RecordController.h  UserController.cc  UserController.h
LibManagerServer/src/filters/: CorsFilter.cc  CorsFilter.h  LoggedInFilter.cc  LoggedInFilter.h
LibManagerServer/src/models/: Record.cc  Record.h  Users.cc  Users.h  model.json
LibManagerServer/src/services/: UserTokenStorage.h
LibManagerServer/src/sql/: createDB.sql
LibManagerServer/src/utils/: helpers.h
LibManagerServer/src/utils/MARC/: Directory.h  MARCProcessor.cpp  MARCProcessor.h
LibManagerServer/src/utils/MARC/00x/: ControlNumber.h  ControlNumberIdentifier.h  DateAndTimeOfLatestTransaction.h  FixedLengthDataElementsGeneralInformation.h  PhysicalDescriptionFixedFieldGeneralInformation.h
LibManagerServer/src/utils/MARC/01x-09x/: CatalogingSource.h  ISBN.h  ISSN.h  LanguageCode.h  UniversalDecimalClassificationNumber.h
LibManagerServer/src/utils/MARC/1xx/: MainEntryCorporateName.h  MainEntryPersonalName.h
LibManagerServer/src/utils/MARC/enumHelpers/: FixedLengthDataElementsEnumHelper.h  PhysicalDescriptionEnumHelpers.h
LibManagerServer/src/utils/MARC/expections/: Exception.h
LibManagerServer/src/utils/MARC/helpers/: Constants.h
LibManagerServer/src/utils/MARC/leader/: Leader.h
LibManagerWeb/: README.md  angular.json  package-lock.json  package.json
LibManagerWeb/src/: index.html
LibManagerWeb/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
LibManagerWeb/src/app/components/login/: login.component.html  login.component.ts
LibManagerWeb/src/app/components/modify-permission/: modify-permission.component.html  (+1 more)
LibManagerWeb/src/app/models/: permissions.ts  user.ts
LibManagerWeb/src/app/services/: auth-guard.service.ts  auth.service.ts  storage.service.ts
